My second commit

--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sneha Poudel</h1>
-    <h2>L4CG8</h2>
-    <h3>Address:Swoyambhu</h3>
-    <h4>Hobbies:Riding bike</h4>
-    <h5>Skills:Guff hanney</h5>
+    <h1>SAbout me</h1>
+    <p> its me sneha dd. I am studying at herald</p>
+
     
     
 </body>
